--- a/files/templates/ose-sdk-templates/qmlappinfo/appinfo.json
+++ b/files/templates/ose-sdk-templates/qmlappinfo/appinfo.json
@@ -6,5 +6,5 @@
     "main": "main.qml",
     "title": "QML App",
     "icon": "icon.png",
-    "requiredPermissions" : ["time", "applications"]
+    "requiredPermissions" : ["time.query", "applications.operation"]
 }
