:Release Notes: Support ares-log
:Detailed Notes:
ares-log provides the user with a more convenient function to check the log.
Most of the options provided by the existing journald can be utilized.
In addition, it provides a function to save log, search log file list, and search unit list.

:Testing Performed:
1. Pass unit test on ose and auto
2. Pass eslint
3. Check below options
- node ares-log.js -sd pmlogd
- node ares-log.js -cd
- node ares-log.js -f
- node ares-log.js -r
- node ares-log.js -n 7
- node ares-log.js -k
- node ares-log.js -b
- node ares-log.js -S today
- node ares-log.js -U yesterday
- node ares-log.js -S 2021-04-07 21:45:00 --until 2021-04-07 21:46:00
- node ares-log.js -f -pid 1834
- node ares-log.js -f -o json
- node ares-log.js -n 7 -s
- node ares-log.js -f -s
- node ares-log.js -s tmp.log
- node ares-log.js -s tmp
- node ares-log.js -f -o -d ose
- node ares-log.js -f -o jjson -d ose
- node ares-log.js --file-list
- node ares-log.js --file system.journal
-  node ares-log.js -ul
- node ares-log.js -ul -dp 1
- node ares-log.js -u com.webos.service.position -d auto
- node ares-log.js -u sam -dp 1 -f -d auto

:Issues Addressed:
[PLAT-134677] Support to unit test of ares-log

--- a/files/conf-base/profile/config-ose.json
+++ b/files/conf-base/profile/config-ose.json
@@ -16,5 +16,6 @@
         "changeTempDir" : true,
         "removeIpkAfterInst" : true
     },
-    "dataDir":".webos/ose"
+    "dataDir":".webos/ose",
+    "logDaemon": "journald"
 }
