[feasibility] Status message & spinner

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mkdirp": "0.5.5",
     "nopt": "2.1.2",
     "npmlog": "4.1.2",
+    "ora": "^5.4.0",
     "request": "2.88.2",
     "rimraf": "3.0.2",
     "semver": "7.3.2",
