Support ares-launch to APIs
Release Notes:
Support ares-launch to APIs

:Detailed Notes:
- Open launch, close and listRunningApp functions as APIs
- Remove unusing option

:Testing Performed:
1. Passed CLI unit test on OSE target
2. Pass eslint
3. Check each APIs are woking fine using test app

:Issues Addressed:
[WRO-7774] Develop APIs of ares-launch

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@webosose/ares-cli",
   "version": "2.3.1",
   "description": "Command Line Interface for development webOS application and service",
-  "main": "./bin/ares.js",
+  "main": "APIs.js",
   "author": "ye.kim",
   "repository": {
     "type": "git",
